<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.vejoe.imgproc.RegisterActivity"
    android:background="#2d3d54">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#88909e">
        <AutoCompleteTextView
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_smartphone"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:backgroundTint="#88909e"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#88909e">

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:backgroundTint="#88909e"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#88909e">

        <EditText
            android:id="@+id/reg_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:backgroundTint="#88909e"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_button"
        style="?android:textAppearanceMediumInverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_register"
        android:textStyle="bold"
        android:background="@drawable/btn_bg"/>

</LinearLayout>